# task-management-actix

./: .env  Cargo.toml  README.md
src/: main.rs
src/db/: db.rs  migrations.rs  mod.rs  server.rs
src/handlers/: handlers.rs  mod.rs  test.rs
src/jwt/: jwt.rs
src/lib/: handlers.rs  models.rs
src/lib/handlers/: test.rs
src/model/: models.rs
