[package]
name = "task-management-actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
log = "0.4.21"
serde = "1.0.203"
serde_derive = "1.0.203"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
validator = { version = "0.18.1", features = ["derive"] }
